--- a/Frontend/admin-reports.html
+++ b/Frontend/admin-reports.html
@@ -33,10 +33,10 @@
                     <i class="fas fa-chart-bar"></i> Reports Management
                 </a>
                 <a href="./admin-inventory.html" class="nav-link">
-                    <i class="fas fa-chart-bar"></i> Inventory Management
+                    <i class="fas fa-boxes"></i> Inventory Management
                 </a>
                 <a href="./admin-toolbox.html" class="nav-link">
-                    <i class="fas fa-boxes"></i> Toolbox Management
+                    <i class="fas fa-tools"></i> Toolbox Management
                 </a>
                 <button class="logout-btn" onclick="logout()">
                     <i class="fas fa-sign-out-alt"></i> Logout
@@ -53,12 +53,9 @@
                 <button class="btn secondary" onclick="exportReports()">
                     <i class="fas fa-download"></i> Export All
                 </button>
-                <button class="btn primary" onclick="refreshReports()">
-                    <i class="fas fa-sync"></i> Refresh
-                </button>
             </div>
         </div>
-        
+
         <!-- Report Statistics -->
         <div class="stats-section">
             <h3>Report Statistics</h3>
@@ -132,7 +129,7 @@
             <button id="nextPage" onclick="changePage(1)">Next</button>
         </div>
 
-        
+
     </main>
 
     <!-- Delete Confirmation Modal -->
@@ -165,6 +162,9 @@
                 <!-- Report details will be loaded here -->
             </div>
             <div class="modal-footer">
+                <button class="btn primary" onclick="printReportDetails()" title="Print Report">
+                    <i class="fas fa-print"></i> Print
+                </button>
                 <button class="btn secondary" onclick="closeReportDetailsModal()">Close</button>
             </div>
         </div>
