--- a/Frontend/admin-dashboard.html
+++ b/Frontend/admin-dashboard.html
@@ -35,9 +35,8 @@
                     <i class="fas fa-chart-bar"></i> Inventory Management
                 </a>
                 <a href="./admin-toolbox.html" class="nav-link">
-                    <i class="fas fa-boxes"></i> Toolbox Management
+                    <i class="fas fa-tools"></i> Toolbox Management
                 </a>
-
                 <button class="logout-btn" onclick="logout()">
                     <i class="fas fa-sign-out-alt"></i> Logout
                 </button>
